# aoc-bench

./: .gitignore  Cargo.toml  DESIGN.md  README.md  TASKS.md  clippy.toml  lefthook.yaml  schema.sql
.github/workflows/: rust.yaml  web.yaml
src/: cli.rs  config.rs  host_config.rs  lib.rs  main.rs  measurement.rs  protocol.rs  run.rs  runner.rs  stable.rs  stats.rs  storage.rs
src/cli/: args.rs  format.rs  logging.rs  mod.rs
src/cli/commands/: debug.rs  export.rs  export_web.rs  fastest.rs  impact.rs  mod.rs  run.rs  run_all.rs  timeline.rs
src/commands/: debug.rs  export.rs  impact.rs  mod.rs  run.rs  sample.rs  timeline.rs
src/config/: parse.rs
src/engine/: mod.rs  run.rs  stats.rs
src/engine/web_export/: build.rs  error.rs  format.rs  mod.rs  snapshot.rs
src/group/: mod.rs  resolve.rs
src/run/: mod.rs  model.rs  process.rs  schedule.rs  test_support.rs
src/storage/: hybrid_disk.rs  measurement_file.rs  measurement_id.rs  migration.rs  multi_host.rs  test_support.rs
src/storage/sql_migrations/: 00-schema.sql  01-results-counts.sql  02-run-series-metrics.sql  03-dedupe-schema.sql  04-drop-v1-schema.sql
src/workload/: hash.rs  identity.rs  mod.rs
tests/: run_command.rs
tools/aoc-rs-bench/: Cargo.toml  build.sh  config.py  layout.ld  prune.py  rustc-wrapper-strip-metadata.sh
tools/aoc-rs-bench/analysis/: build_configuration_analysis.py
tools/aoc-rs-bench/src/: lib.rs  main.rs
tools/bench-host/: README.md  bench-all.sh  ex44-installimage.txt  setup.yml
tools/bench-host/files/: tuned.conf
tools/bench-host/host_vars/: k8.yml  raptor-bench.yml
tools/bench-host/templates/: aoc-bench.service.j2
tools/ex44/: README.md  bench-all.sh  installimage.txt  setup.yml
tools/ex44/templates/: aoc-bench.service.j2
web/: .prettierignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.css
web/src/components/benchmarks/: BenchmarkConfigTable.test.tsx  BenchmarkConfigTable.tsx  BenchmarkLeaderboard.tsx  DashboardInsights.test.tsx  DashboardInsights.tsx
web/src/components/charts/: HistoryChart.tsx  StepTimelineChart.test.tsx  StepTimelineChart.tsx
web/src/components/config/: ConfigFilter.tsx  GroupValueLabel.tsx
web/src/components/layout/: Footer.tsx  Header.test.tsx  Header.tsx
web/src/components/ui/: combobox.tsx  dialog.tsx  markdown-links.test.tsx  markdown-links.tsx  popover.tsx  table.tsx
web/src/hooks/: queries.test.tsx  queries.ts  theme-provider.tsx  url-state-provider.test.tsx  url-state-provider.tsx  use-theme.ts  use-url-state.test.tsx  use-url-state.tsx
web/src/lib/: api-decode.test.ts  api.test.ts  api.ts  config-order.test.ts  config-order.ts  config-signature.ts  dashboard-insights.test.ts  dashboard-insights.ts  delta.test.ts  delta.ts  downsample.test.ts  downsample.ts  format.ts  routes.ts  theme-provider.tsx  timeline-grouping.test.ts  timeline-grouping.ts  types.ts  utils.ts
web/src/pages/: BenchmarkDetail.tsx  Dashboard.test.tsx  Dashboard.tsx  Impact.test.tsx  Impact.tsx  Timeline.test.tsx  Timeline.tsx  TimelineFilters.test.tsx
web/src/test/: fixtures.ts  query-client.tsx
