[package]
name = "aoc-bench"
authors = ["Ethan Jones <ictrobot@outlook.com>"]
edition = "2024"
license = "MIT"
publish = false
repository = "https://github.com/ictrobot/aoc-rs"
rust-version = "1.91.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
chrono = "0.4"
rand_xoshiro = "0.7.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
