[package]
name = "aoc-rs-bench"
authors = ["Ethan Jones <ictrobot@outlook.com>"]
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/ictrobot/aoc-bench"
rust-version = "1.75.0"

[workspace]
# Required to stop Cargo trying to parse the manifest at the root of the repo, which will fail for older version

[dependencies]
# Default to ab1e77c27919360630046d825583af16a1423d16, the first revision where all 4 crates are present.
# This is required so that Cargo still has a compatible manifest to parse when building commits that don't have a
# year2016 crate, and also prevents errors about unsupported manifest features on the first run without a preexisting
# Cargo.lock file.
aoc = { git = "https://github.com/ictrobot/aoc-rs", rev = "ab1e77c27919360630046d825583af16a1423d16" }
# Direct dependencies needed for glue v0-v4 which don't re-export the utils and year crates
utils = { git = "https://github.com/ictrobot/aoc-rs", rev = "ab1e77c27919360630046d825583af16a1423d16", optional = true }
year2015 = { git = "https://github.com/ictrobot/aoc-rs", rev = "ab1e77c27919360630046d825583af16a1423d16", optional = true }
year2016 = { git = "https://github.com/ictrobot/aoc-rs", rev = "ab1e77c27919360630046d825583af16a1423d16", optional = true }

[features]
glue-v0 = ["utils", "year2015"] # Doesn't re-export crates
glue-v1 = ["utils", "year2015"]
glue-v2 = ["utils", "year2015"]
glue-v3 = ["utils", "year2015"]
glue-v4 = ["utils", "year2015", "year2016"]
glue-v5 = []
glue-v6 = []

[profile.release]
incremental = false
codegen-units = 1
